--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = { version = "2.0.0", features = ["postgres"] }
+r2d2 = "0.8.9"
+diesel = { version = "2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
+diesel_migrations = "2.0"
+
 thiserror = "1"
 uuid = { version = "*", features = ["v4", "serde"] }
 chrono = { version = "0.4.19", features = ["serde"] }
+
+log = "*"
+simple_logger = "4.0"
+
+serde = "*"
+serde_json = "*"
+serde_derive = "*"
 
 tenet = { git = "https://github.com/stec-ug-haftungsbeschrankt/tenet.git" }
