--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ chrono = { version = "0.4.19", features = ["serde"] }
 log = "*"
 simple_logger = "4.0"
 
+rand = "0.8.3"
+rust-argon2 = "2.0.0"
+
 serde = "*"
 serde_json = "*"
 serde_derive = "*"
