--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,27 +6,26 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-r2d2 = "0.8"
-diesel = { version = "2.2", features = ["postgres", "r2d2", "uuid", "chrono"] }
-diesel_migrations = "2.2"
+r2d2 = "0.8.10"
+diesel = { version = "2.2.7", features = ["postgres", "r2d2", "uuid", "chrono"] }
+diesel_migrations = "2.2.0"
 
-thiserror = "2.0"
-uuid = { version = "*", features = ["v4", "serde"] }
-chrono = { version = "0.4.19", features = ["serde"] }
+thiserror = "2.0.11"
+uuid = { version = "1.13.1", features = ["v4", "serde"] }
+chrono = { version = "0.4.39", features = ["serde"] }
 
-log = "*"
-simple_logger = "5.0"
+log = "0.4.25"
+simple_logger = "5.0.0"
 
-rand = "0.8.3"
-rust-argon2 = "2.0.0"
+rand = "0.8.5"
+rust-argon2 = "2.1.0"
 
-serde = "*"
-serde_json = "*"
-serde_derive = "*"
+serde = "1.0.217"
+serde_json = "1.0.138"
+serde_derive = "1.0.217"
 
 tenet = { git = "https://github.com/stec-ug-haftungsbeschrankt/tenet.git" }
 
 
 [dev-dependencies]
-testcontainers = "*"
-testcontainers-modules = { version = "0.11.4", features = ["postgres", "blocking"] }
+testcontainers-modules = { version = "0.11.6", features = ["postgres", "blocking"] }
