--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
-name = "shopster"
-version = "0.1.0"
+name = "stec_shopster"
+description = "Persistence layer for a shop system."
+authors = ["Stefan Schick <stefan.schick@stecug.de>"]
+license = "GPL-3.0-or-later"
+readme = "README.md"
+homepage = "https://stecug.de"
+version = "0.2.0"
 edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -24,8 +29,8 @@ serde = "1.0.217"
 serde_json = "1.0.138"
 serde_derive = "1.0.217"
 
-tenet = { git = "https://github.com/stec-ug-haftungsbeschrankt/tenet.git" }
+stec_tenet = "0.3.0"
 
 
 [dev-dependencies]
-testcontainers-modules = { version = "0.11.6", features = ["postgres", "blocking"] }
+testcontainers-modules = { version = "0.12.1", features = ["postgres", "blocking"] }
