--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Stefan Schick <stefan.schick@stecug.de>"]
 license = "GPL-3.0-or-later"
 readme = "README.md"
 homepage = "https://stecug.de"
-version = "0.2.12"
+repository = "https://github.com/stec-ug-haftungsbeschrankt/shopster"
+version = "0.2.13"
 edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
